workign on countdown

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Decoloring",
+    "name": "Color Guard",
     "version": "1.0",
-    "description": "Decolors websites that are meant to grab your attention. Makes the internet less addictive.",
+    "description": "Grayscales websites that are meant to grab your attention. Makes the internet less addictive.",
     "action": {
         "default_popup": "popup.html",
         "default_icon": "images/icon.png"
